# website

./: .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  django.yml
blog/: admin.py  api_urls.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_category_post_categories.py  0002_post_vector.py  0003_alter_category_options_and_more.py  0003_pgvector.py  0004_article.py  0004_post_embedding.py  0005_remove_post_vector_article_embedding.py
blog/templates/blog/: article.html  base.html  post.html  search_results.html
mysite/: urls.py  wsgi.py
mysite/settings/: base.py  dev.py  prod.py
pages/: forms.py  urls.py  views.py
pages/templates/pages/: about.html  contact.html  home.html
static/css/: simplified_green_style.css  styles.css
templates/: base.html
templates/blog/: base.html  category.html  post.html
templates/pages/: contact.html  home.html
tests/blog/: test_api.py  test_blog__views.py
tests/blog/views/: test_views.py
tests/pages/: test_pages__views.py
tests/pages/views/: test_views.py
