[project]
name = "website"
version = "0.1.0"
description = "My web site!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==5.0.8",
    "gunicorn==22.0.0",
    "asgiref==3.8.1",
    "sqlparse==0.5.0",
    "typing-extensions==4.12.2",
    "whitenoise==6.7.0",
    "dj-database-url==2.3.0",
    "logfire[django]>=3.7.1",
    "sentry-sdk[django]>=2.22.0",
    "psycopg[binary]>=3.2.9",
    "pgvector>=0.4.1",
    "sentence-transformers>=5.1.0",
    "torch==2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "ruff>=0.9.9",
    "pre-commit>=4.1.0",
    "django-debug-toolbar>=5.1.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings.dev"
python_files = "tests.py test_*.py *_tests.py"
cache_dir = ".pytest_cache_dir"

[tool.hatch.build.targets.wheel]
packages = ["website"]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]